--- a/Retofit2/app/src/main/res/layout/activity_cart.xml
+++ b/Retofit2/app/src/main/res/layout/activity_cart.xml
@@ -94,10 +94,11 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/cartRecyclerView"
         app:layout_constraintBottom_toTopOf="@+id/shippingButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/cartRecyclerView">
 
         <TextView
             android:id="@+id/totalAmountText"
@@ -112,7 +113,7 @@
         android:id="@+id/shippingButton"
         android:layout_width="match_parent"
         android:layout_height="55dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="28dp"
         android:background="@drawable/round_back_primary_15"
         android:text="Shipping"
         android:textAllCaps="false"
